Fix text not showing up in Safari

--- a/assets/css/components/card.css
+++ b/assets/css/components/card.css
@@ -21,8 +21,9 @@
 	position: relative;
 
 	/* Make the name of the press channel at the bottom and the date at the top */
-	display: grid;
-	align-content: space-between;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	padding: var(--inner-spacing);
 }
 
@@ -31,6 +32,7 @@
 	height: 100%;
 	object-fit: cover;
 	position: absolute;
+	inset: 0;
 }
 
 .card__body {
